[package]
name = "ya-debugger"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "e68bbd90c903c6f74f77fddb80a432d20e4e2b2a"}
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "e68bbd90c903c6f74f77fddb80a432d20e4e2b2a"}

yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "messaging-through-streaming" }
#yarapi = { path = "../../../Golem/yarapi", branch = "messaging-through-streaming" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono = "0.4.10"
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
humantime = "2.0.1"
indicatif = "0.15.0"
log = "0.4"
semver = "0.10.0"
serde = "1.0.117"
serde_json = "1.0"
structopt = "0.3"
tabular = "0.1.4"
tokio = { version = "0.2.10", features = ["fs"] }